<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/gilda_display"
        android:text="@string/label_sign_in"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/gilda_display"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/Text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/gilda_display"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/Text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:background="@color/Primary"
        android:gravity="center"
        android:text="@string/btn_login"
        android:textColor="@color/Accent"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSignUpLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:background="@color/DarkGray"
        android:gravity="center"
        android:text="@string/btn_sign_up"
        android:textColor="@color/Accent"
        android:textSize="18sp"
        app:backgroundTint="@color/DarkGray" />

</LinearLayout>